# ga4-cmcp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt  server.py
src/: index.ts
src/ga4_mcp/: __main__.py  auth.py  server.py
src/ga4_mcp/tools/: analytics.py
