[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ga4-mcp"
version = "1.0.0"
description = "Google Analytics 4 MCP server with OAuth authentication"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.1.0",
    "httpx>=0.28.1",
]

[project.scripts]
ga4-mcp = "ga4_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ga4_mcp"]
